--- a/Pocophone/index.html
+++ b/Pocophone/index.html
@@ -126,7 +126,9 @@
         <span class="panel-icon">
           <i class="fas fa-book" aria-hidden="true"></i>
         </span>
-        Vivo Y35
+        <div class="anim">
+          <p>Vivo Y35</p>
+        </div>
       </a>
       <a class="panel-block">
         <span class="panel-icon">
